--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/webapp-pack ###
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 APP_SECRET=835fafa468dbad63b7a7c3d46305716e
 ###< symfony/framework-bundle ###
 
@@ -42,5 +42,5 @@ DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
-MAILJET_API_KEY=''
-MAILJET_API_KEY_SECRET=''
+#MAILJET_API_KEY=''
+#MAILJET_API_KEY_SECRET=''
