--- a/config/services.yaml
+++ b/config/services.yaml
@@ -3,15 +3,15 @@
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
-parameters:
-    mailjet.api.key: '%env(MAILJET_API_KEY)%'
-    mailjet.api.key.secret: '%env(MAILJET_API_KEY_SECRET)%'
-    mailjet.api.version: 'v3.1'
-    email.from: 'snowtrick42@gmail.com'
-    email.name: 'Snowtrick'
-    image_directory: '%kernel.project_dir%/public/upload/tricks/images'
-    profiles_directory: '%kernel.project_dir%/public/upload/profiles/images'
-    video_directory: '%kernel.project_dir%/public/upload/tricks/videos'
+#parameters:
+#    mailjet.api.key: '%env(MAILJET_API_KEY)%'
+#    mailjet.api.key.secret: '%env(MAILJET_API_KEY_SECRET)%'
+#    mailjet.api.version: 'v3.1'
+#    email.from: 'snowtrick42@gmail.com'
+#    email.name: 'Snowtrick'
+#    image_directory: '%kernel.project_dir%/public/upload/tricks/images'
+#    profiles_directory: '%kernel.project_dir%/public/upload/profiles/images'
+#    video_directory: '%kernel.project_dir%/public/upload/tricks/videos'
 
 services:
     # default configuration for services in *this* file
@@ -30,13 +30,13 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
-    App\Service\MailService:
-        arguments:
-            $mailjetApiKey: '%mailjet.api.key%'
-            $mailjetApiKeySecret: '%mailjet.api.key.secret%'
-            $mailjetApiVersion: '%mailjet.api.version%'
-            $emailFrom: '%email.from%'
-            $emailName: '%email.name%'
+#    App\Service\MailService:
+#        arguments:
+#            $mailjetApiKey: '%mailjet.api.key%'
+#            $mailjetApiKeySecret: '%mailjet.api.key.secret%'
+#            $mailjetApiVersion: '%mailjet.api.version%'
+#            $emailFrom: '%email.from%'
+#            $emailName: '%email.name%'
     App\Service\FileUploader:
         arguments:
             $publicDirectory: '%kernel.project_dir%/public'
